test/conformance/chainsaw/verifyImages/clusterpolicy/standard/keyless-attestations-multiple-subjects-2/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
  name: check-slsa-attestations-pass-2
spec:
  background: false
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: check-builder-id-keyless
    verifyImages:
    - attestations:
      - attestors:
        - entries:
          - keyless:
              ctlog:
                ignoreSCT: true
              issuer: https://token.actions.githubusercontent.com
              rekor:
                url: https://rekor.sigstore.dev
              subject: https://github.com/chipzoller/zulu/.github/workflows/vulnerability-scan.yaml@refs/heads/main
        conditions:
        - all:
          - key: '{{ regex_match(''^pkg:github/aquasecurity/trivy@0.34.0'',''{{ scanner.uri
              }}'') }}'
            operator: Equals
            value: true
        predicateType: cosign.sigstore.dev/attestation/vuln/v1
      imageReferences:
      - ghcr.io/kyverno/zulu*
      failureAction: Enforce
  webhookTimeoutSeconds: 30
