test/conformance/chainsaw/verifyImages/clusterpolicy/standard/keyless-attestations-multiple-subjects-2/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: keyless-attestations-multiple-subjects-2
spec:
  timeouts:
    apply: 10s
  steps:
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1.yaml
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1.yaml
    - assert:
        file: chainsaw-step-02-assert-1.yaml
